<resources>

    <!-- yleiset -->
    <string name="app_name">Time4Play</string>
    <string name="hello_blank_fragment">Tyhja Fragmentti</string>

    <!-- fragment_toimip -->
    <string name="bt_vahvista_tpvalinta">Vahvista</string>

    <!-- Toimipisteen hallinta -->
    <string name="tv_th_Otsikko">Valitse toimipiste</string>

    <!-- toimip_hallinta -->
    <string name="bt_text_Lisaa_toimipiste">Lisää</string>
    <string name="bt_text_Muokkaa_toimipiste">Muokkaa</string>
    <string name="bt_text_Poista_toimipiste">Poista</string>
    <string name="bt_text_Poistu_toimipiste">Poistu</string>
    <string name="tw_Otsikko_toimip_hallinta">Toimipisteiden hallinnointi</string>
    <string name="bt_poista_asiakas">Poista asiakas</string>
    <string name="text_bt_AsiakasHallinta_toimip_hallinta">Asiakashallinta</string>

    <!-- toimp_lisays -->
    <string name="tw_tpTiedotTeksti">Anna uuden toimipisteen tiedot</string>
    <string name="et_tpLisaysNimi">Toimipisteen Nimi</string>
    <string name="et_tpKaupunki">Toimipisteen kaupunki</string>
    <string name="et_tpVastaava">Toimipistevastaavan email</string>
    <string name="et_tpLisaysSalasana">Uusi salasana</string>
    <string name="bt_tpLisaaNappi">Lisää toimipiste</string>
    <string name="bt_tpLisaysPaluu">Paluu</string>

    <!-- toimip_muokkaus -->
    <string name="tw_tpTiedotTeksti_Muokkaus">Muokkaa toimipistettä</string>
    <string name="et_tpMuokkausNimi">Toimipiste nimi</string>
    <string name="et_tpMuokkausKaupunki">Toimipiste kaupunki</string>
    <string name="et_tpMuokkausVastaava">ToimipisteVastaava</string>
    <string name="bt_tpMuutoksetNappi">Vahvista muutokset</string>

    <!-- toimip_poisto -->
    <string name="tw_tpHaluatkoPoistaaTeksti">Haluatko varmasti poistaa toimipisteen</string>
    <string name="bt_tpPoistoKylla">Kyllä</string>
    <string name="bt_tpPoistoPalaaAlkuIkkuna">Palaa poistamatta</string>


    <!-- th_kentta_lisays -->
    <string name="tw_otsikko_kenttaLisays">Lisää uusi kenttä</string>
    <string name="et_text_lajitunnus_kenttaLisays">Lajitunnus</string>
    <string name="et_text_tuntihinta_kenttaLisays">Tuntihinta</string>
    <string name="et_text_kentanNimi_kenttaLisays">Kentän nimi</string>
    <string name="bt_text_kenttaLisays_LisaaKentta">Lisää kenttä</string>

    <!-- th_muokattava_laji -->
    <string name="tv_otsikko_th_muokattava_laji">Valitse laji, jonka pelivälineitä haluat muokata</string>
    <string name="rb_tennis_th_muokattava_laji">Tennis</string>
    <string name="rb_sulkapallo_th_muokattava_laji">Sulkapallo</string>
    <string name="bt_vahvista_th_muokattava_laji">Vahvista</string>

    <!-- th_peliv_muokkaukset -->
    <string name="tv_otsikko_th_peliv_muutokset">Valitse peliväline, johon haluat tehdä muutoksia</string>
    <string name="bt_text_Seuraava_th_peliv_muutokset">Seuraava</string>

    <!-- th_pelivaline_muokkaus -->
    <string name="tv_otsikko_th_pelivaline_muokkaus">Pelivälineen muokkaus</string>
    <string name="tv_valitunPelivNimi_th_pelivaline_muokkaus"></string>
    <string name="et_pelivNimi_th_pelivaline_muokkaus">Nimi</string>
    <string name="et_pelivHinta_th_pelivaline_muokkaus">Hinta</string>
    <string name="bt_poistaPeliv_th_pelivaline_muokkaus">Poista peliväline</string>
    <string name="bt_vahvista_th_pelivaline_muokkaus">Vahvista muutokset</string>
    <string name="bt_palaa_th_pelivaline_muokkaus">Paluu</string>
    <string name="text_tvVaroitus_pelivaline_muokkaus">Ei tyhjiä kenttiä sallittu</string>

    <!-- th_pelivaline_lisays -->
    <string name="tv_otsikko_th_pelivaline_lisays">Lisää uusi peliväline</string>
    <string name="et_valineNimi_th_pelivaline_lisays">Nimi</string>
    <string name="et_valineHinta_th_pelivaline_lisays">Hinta</string>
    <string name="bt_lisaaPelivalinePainike_th_pelivaline_lisays">Lisää peliväline</string>
    <string name="bt_poistuPainike_th_pelivaline_lisays">Poistu</string>
    <string name="text_th_pelivaline_lisays_Varoitus">Anna kaikki tiedot.</string>

    <!-- Login -->
    <string name="et_text_Salasana_Login">Salasana</string>
    <string name="et_text_syotasapo_Login">Syötä Sähköpostiosoite</string>
    <string name="bt_text_Kirjaudu_Login">Kirjaudu</string>
    <string name="bt_text_Rekisteroidt_Login">Rekisteröidy</string>
    <string name="text_tvLogin_varoitus">Käyttäjätunnus tai salasana puuttuu!</string>
    <string name="text_tvLogin_vaaratKirjautumistiedot">Käyttäjätunnus tai salasana virheellinen.</string>

    <!-- Register -->
    <string name="et_text_Salasana_Register">Anna salasana</string>
    <string name="et_text_syotasapo_Register">Anna sähköpostiosoite</string>
    <string name="bt_text_Register_Register">Rekisteröidy</string>
    <string name="et_text_Anna_Osoite">Anna osoitteesi</string>
    <string name="et_text_Nimi_Register">Anna nimesi</string>
    <string name="tv_text_Virhe">Rekisteröityminen epäonnistui.
        Sähköpostiosoitteellasi on jo käyttäjätunnus.
        Ota tarvittaessa yhteyttä lähimpään toimipisteeseen.
    -Pallopojulit-</string>

    <!-- Päivämäärä -->
    <string name="tw_PVM_Teksti">Valitse päivä</string>
    <string name="cv_PVM_Kalenteri">Kalenteri</string>
    <string name="tw_PVM_TekstiLajiValinta">Valitse pelattava laji</string>
    <string name="rb_PVM_Tennis">Tennis</string>
    <string name="rb_PVM_Sulkapallo">Sulkapallo</string>
    <string name="bt_PVM_VahvistaNappi">Vahvista</string>

    <!-- pelivalineet -->
    <string name="tv_otsikko_pelivalineet">Pelivälineiden osto tai vuokraus</string>
    <string name="bt_seuraava_pelivalineet">Seuraava</string>

    <!-- pelivalineet_item -->
    <string name="cb_osta"></string>

    <!-- maksuikkuna -->
    <string name="tv_otsikko_maksuikkuna">Miten haluat maksaa?</string>
    <string name="tv_yhteensaTeksti_maksuikkuna">Yhteensä:</string>
    <string name="tv_summa_maksuikkuna"></string>
    <string name="rb_sahkopostiValinta_maksuikkuna">Sähköinen lasku (sähköpostiin)</string>
    <string name="rb_paperilaskuValinta_maksuikkuna">Paperilasku postitse</string>
    <string name="tv_sahkopostiAsiakkaan_maksuikkuna"></string>
    <string name="pt_nimiAsiakkaan_maksuikkuna">Nimi</string>
    <string name="pt_osoiteAsiakkaan_maksuikkuna">Osoite</string>
    <string name="tv_vahvistuksenTeksti_maksuikkuna">Painamalla \"vahvista\" vakuutat tietojen olevan oikein.</string>
    <string name="bt_vahvistaPainike_maksuikkuna">Vahvista</string>
    <string name="bt_vahvistaNappulaUudetTiedot_maksuikkuna">Vahvista ja päivitä tiedot</string>

    <!-- toimipisteen_hallinta -->
    <string name="tv_toimipisteenHallinta_otsikko">Toimipisteen hallinta</string>
    <string name="bt_toimipisteenHallinta_lisaaKentta">Lisää kenttä</string>
    <string name="bt_toimipisteenHallinta_muokkaaKenttaa">Muokkaa kenttää</string>
    <string name="bt_toimipisteenHallinta_uusiPelivaline">Lisää peliväline</string>
    <string name="bt_toimipisteenHallinta_muokkaaPelivalineita">Muokkaa pelivälineitä</string>
    <string name="bt_toimipisteenHallinta_poistu">Poistu</string>
    <string name="bt_toimipisteenhallinta_raportti">Raportit</string>
    <string name="bt_toimipisteenhallinta_laskuta">Laskutus</string>

    <!-- Loppuikkuna -->
    <string name="tv_loppuikkunaKiitosTeksti">Kiitoksia asioinnista!</string>
    <string name="tv_LoppuikkunaSinutOhjataanTakas">Palaa kirjautumisikkunaan painamalla tästä</string>

    <!-- th_kentta_muokkattava -->
    <string name="tv_thMuokkausKenttaOtsikko">Valitse kenttä, jota haluat muokata</string>
    <string name="bt_thMuokkausKenttaSeuraava">Seuraava</string>

    <!-- th kenttää muokataan -->
    <string name="tv_thMuokattavaKenttaTeksti">Kentän muokkaus</string>
    <string name="et_thMuokattavaKenttaLajitunnus">Lajitunnus</string>
    <string name="et_thMuokattavaKenttaTuntihinta">Tuntihinta</string>
    <string name="et_thMuokattavaKenttaNimi">Kentän nimi</string>
    <string name="bt_thMuokkausKenttaPoista">Poista kenttä</string>
    <string name="bt_thMuokkausKenttaVahvista">Vahvista muutokset</string>
    <string name="bt_thKentta_MuokkausPalaa">Paluu</string>

    <!-- kentta -->
    <string name="tv_kenttaValitse">Valitse kenttä</string>
    <string name="bt_kenttaVahvista">Vahvista</string>

    <!-- raportti -->
    <string name="tv_raportti_Otsikko">Raportti</string>
    <string name="et_raportti_PVMAlku">VVVV-KK-PP</string>
    <string name="et_raportti_PVMLoppu">VVVV-KK-PP</string>
    <string name="bt_raportti_Vahvista">Hae raportti</string>
    <string name="bt_raportti_Paluu">Palaa takaisin</string>
    <string name="tv_raportti_Alku">AlkuPVM</string>
    <string name="tv_raportti_Loppu">LoppuPVM</string>
    <string name="text_bt_avoimetLaskut">Avoimet laskut</string>
    <string name="text_bt_tamaPaiva">Tänään</string>

    <!-- Laskutus -->
    <string name="text_Otsikko_Laskutus">Laskutus</string>
    <string name="bt_Paluu_laskutus">Palaa takaisin ilman muutoksia</string>
    <string name="bt_Tallenna_laskutus">Merkitse kaikki laskutetuiksi</string>

    <!-- AsiakasHallinta -->
    <string name="text_Otsikko_asiakashallinta">Asiakashallinta</string>
    <string name="et_anna_poistettava_asiakas">Poistettavan asiakkaan email</string>

</resources>