<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".toimipisteen_hallintaFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_otsikko_toimipisteen_hallinta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tv_toimipisteenHallinta_otsikko"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt_LisaaKentta_toimipisteen_hallinta"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/btn_teema2"
            android:padding="10dp"
            android:text="@string/bt_toimipisteenHallinta_lisaaKentta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_otsikko_toimipisteen_hallinta"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:id="@+id/bt_muokkaaKenttaa_toimipisteen_hallinta"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_teema2"
            android:padding="10dp"
            android:text="@string/bt_toimipisteenHallinta_muokkaaKenttaa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_LisaaKentta_toimipisteen_hallinta" />

        <Button
            android:id="@+id/bt_uusiPelivaline_toimipisteen_hallinta"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_teema2"
            android:padding="10dp"
            android:text="@string/bt_toimipisteenHallinta_uusiPelivaline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_muokkaaKenttaa_toimipisteen_hallinta" />

        <Button
            android:id="@+id/bt_muokkaaPelivalineita_toimipisteen_hallinta"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_teema2"
            android:padding="10dp"
            android:text="@string/bt_toimipisteenHallinta_muokkaaPelivalineita"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_uusiPelivaline_toimipisteen_hallinta" />

        <Button
            android:id="@+id/bt_poistu_toimipisteen_hallinta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/btn_teema"
            android:text="@string/bt_toimipisteenHallinta_poistu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>