<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Raportti">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_raportti_otsikko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:minHeight="48dp"
            android:text="@string/tv_raportti_Otsikko"
            android:textAlignment="center"
            android:textColor="#1d4978"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_raporttiAsetaPVM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/et_raportti_PVMAlku"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_raportti_otsikko" />

        <EditText
            android:id="@+id/et_raporttiLoppuPVM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/et_raportti_PVMAlku"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_raporttiAsetaPVM"
            tools:hint="@string/et_raportti_PVMLoppu" />

        <Button
            android:id="@+id/bt_raportti_Vahvista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_teema2"
            android:minHeight="48dp"
            android:text="@string/bt_raportti_Vahvista"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btTamaPaivaRaportti"
            app:layout_constraintTop_toBottomOf="@+id/et_raporttiLoppuPVM" />

        <Button
            android:id="@+id/bt_raportti_Loppu"
            android:layout_width="126dp"
            android:layout_height="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="68dp"
            android:background="@drawable/btn_teema7"
            android:minHeight="48dp"
            android:text="@string/bt_raportti_Paluu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btRaportti_AvoimetLaskut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_raportti_Vahvista">

            <TextView
                android:id="@+id/tv_raporttiTulostus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingBottom="20dp"
                android:text="-" />
        </ScrollView>

        <TextView
            android:id="@+id/tv_raportti_AlkutekstiPVM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="18dp"
            android:text="@string/tv_raportti_Alku"
            app:layout_constraintBottom_toBottomOf="@+id/et_raporttiAsetaPVM"
            app:layout_constraintEnd_toStartOf="@+id/et_raporttiAsetaPVM"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_raporttiAsetaPVM" />

        <TextView
            android:id="@+id/tv_raportti_LopputekstiPVM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_raportti_Loppu"
            app:layout_constraintBottom_toBottomOf="@+id/et_raporttiLoppuPVM"
            app:layout_constraintEnd_toStartOf="@+id/et_raporttiLoppuPVM"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_raporttiLoppuPVM" />

        <Button
            android:id="@+id/btRaportti_AvoimetLaskut"
            android:layout_width="122dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="68dp"
            android:background="@drawable/btn_teema8"
            android:text="@string/text_bt_avoimetLaskut"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView32"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:src="@drawable/th_progressbar5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btTamaPaivaRaportti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_teema2"
            android:minHeight="48dp"
            android:text="@string/text_bt_tamaPaiva"
            app:layout_constraintEnd_toStartOf="@+id/bt_raportti_Vahvista"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_raporttiLoppuPVM" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>